fix spacing of items

--- a/src/renderer/components/ft-community-post/ft-community-post.scss
+++ b/src/renderer/components/ft-community-post/ft-community-post.scss
@@ -142,3 +142,8 @@
     }
   }
 }
+
+.ft-list-item.grid {
+  min-height: 0 !important;
+  padding-bottom: 20px;
+}
